Edited footer content.

--- a/templates/base.html
+++ b/templates/base.html
@@ -170,14 +170,16 @@
     {% endblock %}
 
     <footer>
+        <div class="row">
+        <div class="col-6">
+            <h4>We accept:</h4>
+        </div>
         <div class="col-3">
-            <h4>We accept</h4>
+            <p><i class="fas fa-cc-apple-pay fa-lg">apple</i></p>
         </div>
-        <div class="col-1">
-            <h4><i class="fas fa-cc-apple-pay fa-lg"></i></h4>
+        <div class="col-3">
+            <p style="color: white;"><i class="fas fa-amex fa-lg"></i></p>
         </div>
-        <div class="col-1">
-            <h4><i class="fas fa-amex fa-lg"></i></h4>
         </div>
     </footer>
 
