Added Heroku site to the allowed hosts.

--- a/templates/base.html
+++ b/templates/base.html
@@ -178,7 +178,7 @@
             <p><i class="fas fa-cc-apple-pay fa-lg">apple</i></p>
         </div>
         <div class="col-3">
-            <p style="color: white;"><i class="fas fa-amex fa-lg"></i></p>
+            <p style="color: white;"><i class="fas fa-amex fa-lg">amex</i></p>
         </div>
         </div>
     </footer>
